--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "change-case": "^2.3.0",
     "ejs": "^2.3.4",
     "merge": "^1.2.0",
+    "minimist": "^1.2.0",
     "prompt": "^0.2.14",
     "wrench": "^1.5.8"
   },
