Updating package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ngen",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "A non-opinionated scaffolding generator.",
   "main": "ngen.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "James Friedman",
   "license": "ISC",
   "dependencies": {
     "change-case": "^2.3.0",
